# smart-emergency-resource-locator

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  USER_MANUAL.md  app.py  bloodbanks.csv  cliff.toml  codemeta.json  constitution.md  firestations.csv  hospitals.csv  policestations.csv  pyproject.toml  requirements-dev.txt  requirements.txt
.specify/: config.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
data/: bloodbanks.csv  firestations.csv  hospitals.csv  policestations.csv
pages/: 01_Dashboard.py  01_🏠_Dashboard.py  02_Resource_Map.py  02_🗺️_Resource_Map.py  03_Hospitals.py  03_🏥_Hospitals.py  04_Blood_Banks.py  04_🩸_Blood_Banks.py  05_Fire_Stations.py  05_🚒_Fire_Stations.py  06_Police_Stations.py  06_👮_Police_Stations.py  07_AI_Assistant.py  07_🤖_AI_Assistant.py  1_Dashboard.py  2_Resource_Map.py  3_Hospitals.py  4_Blood_Banks.py  5_Fire_Stations.py  6_Police_Stations.py  7AI_ASSISTANT.py  7_Resource_Map.py  AI_ASSISTANT.py  Blood_banks.py  Fire_Stations.py  Police_stations.py
specs/: dashboard-analytics.md  resource-locator-search.md
specs/ai-assistant/: plan.md  spec.md
specs/dashboard-analytics/: plan.md  spec.md  tasks.md
specs/resource-locator/: plan.md  tasks.md
src/: main.py
src/api/emergency/: client.py  routes.py  service.py
src/components/: sidebar.py
src/utils/: translations.py
templates/: spec-template.md
tests/: test_app.py  test_emergency_api.py
