[project]
name = "smart-emergency-resource-locator"
version = "1.0.0"
description = "A CivicTech project to locate emergency resources in Hyderabad."
readme = "README.md"
requires-python = ">=3.11"

authors = [
    { name = "Team MTSKV" }
]

license = { text = "AGPL-3.0" }

classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]

dependencies = [
    "streamlit>=1.31.0",
    "pandas>=2.0.0",
    "plotly>=5.15.0",
    "folium>=0.14.0",
    "streamlit-folium>=0.11.0",
    "flask>=3.1.3",
    "werkzeug>=3.1.8",
    "pyjwt>=2.13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=. --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "venv/*",
    ".*",
    "*/__pycache__/*",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "venv",
    "\\.venv",
    "\\.cache",
    "__pycache__",
]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]

[tool.pylint]
max-line-length = 88
disable = [
    "C0114",
    "C0115",
    "C0116",
    "C0103",
    "W2402",
    "E0401",
]

[tool.vulture]
min_confidence = 80
paths = ["."]
exclude = ["venv", ".venv", ".git"]
